RESOLVED FIXED168869
[JSCOnly][GTK] Suppress warnings on return type in B3 and WASM
https://bugs.webkit.org/show_bug.cgi?id=168869
Summary [JSCOnly][GTK] Suppress warnings on return type in B3 and WASM
Yusuke Suzuki
Reported 2017-02-25 05:19:37 PST
[JSCOnly][GTK] Suppress warnings on return type in B3 and WASM
Attachments
Patch (2.22 KB, patch)
2017-02-25 05:20 PST, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2017-02-25 05:20:05 PST
Yusuke Suzuki
Comment 2 2017-03-03 22:26:48 PST
Ping?
Keith Miller
Comment 3 2017-03-04 10:58:19 PST
Comment on attachment 302757 [details] Patch r=me. Why are these warnings happening on GCC though?
Yusuke Suzuki
Comment 4 2017-03-05 00:09:38 PST
(In reply to comment #3) > Comment on attachment 302757 [details] > Patch > > r=me. Why are these warnings happening on GCC though? Even with very new gcc (5.4.0), this warning happens. Maybe, I think that GCC considers switch can take arbitrary integers even if the value is typed with scoped enum.
WebKit Commit Bot
Comment 5 2017-03-05 00:37:38 PST
Comment on attachment 302757 [details] Patch Clearing flags on attachment: 302757 Committed r213433: <http://trac.webkit.org/changeset/213433>
WebKit Commit Bot
Comment 6 2017-03-05 00:37:42 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.