[JSCOnly][GTK] Suppress warnings on return type in B3 and WASM https://bugs.webkit.org/show_bug.cgi?id=168869

Reviewed by Keith Miller.

* b3/B3Width.h:
* wasm/WasmSections.h:


Canonical link: https://commits.webkit.org/186197@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213433 268f45cc-cd09-0410-ab3c-d52691b4dbfc