Source/JavaScriptCore/b3/B3Width.h
@@ -30,6 +30,11 @@
 #include "B3Bank.h"
 #include "B3Type.h"
 
+#if COMPILER(GCC) && ASSERT_DISABLED
+#pragma GCC diagnostic push
+#pragma GCC diagnostic ignored "-Wreturn-type"
+#endif // COMPILER(GCC) && ASSERT_DISABLED
+
 namespace JSC { namespace B3 {
 
 enum Width : int8_t {
@@ -102,6 +107,10 @@ class PrintStream;
 void printInternal(PrintStream&, JSC::B3::Width);
 
 } // namespace WTF
+
+#if COMPILER(GCC) && ASSERT_DISABLED
+#pragma GCC diagnostic pop
+#endif // COMPILER(GCC) && ASSERT_DISABLED
 
 #endif // ENABLE(B3_JIT)
 
